# NIITCourseProject

Image/: CMakeLists.txt  Drawer.cpp  Image.cpp  ImgStreamer.cpp  PixelPainter.cpp
Image/include/: Drawer.h  Image.h  ImgStreamer.h  PixelPainter.h
Loader/: CMakeLists.txt  Loader.cpp
Loader/include/: Loader.h
PicClient/: CMakeLists.txt  main.cpp
PicServer/: CMakeLists.txt  main.cpp
